# rag-ingestion-pipeline

./: .gitignore  Cargo.toml  README.md
crates/bot/: Cargo.toml
crates/bot/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/worker/: Cargo.toml  build.rs
crates/worker/src/: chunker.rs  main.rs
proto/: splitter.proto
scripts/: start.sh
sidecar/: server.py  splitter_pb2.py  splitter_pb2_grpc.py
src/: main.rs
