[package]
name = "rag-ingestion-pipleline"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
pretty_env_logger = "0.5.0"
teloxide = "0.17.0"
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.22.0", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
