[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.29"
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.22.0", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
