[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
common  = { path = "../common" }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
log   = "0.4.29"
pretty_env_logger = "0.5.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
serde_json = "1.0.149"
pdf-extract = "0.10.0"
uuid = { version = "1.22.0", features = ["v4"] }
