[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
common  = { path = "../common" }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
log   = "0.4.29"
pretty_env_logger = "0.5.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
serde_json = "1.0.149"
pdf-extract = "0.10.0"
uuid = { version = "1.22.0", features = ["v4"] }
fastembed = "5.13.0"
tonic = "0.14.5"
tonic-prost = "0.14.5"
prost = "0.14.3"


[build-dependencies]
tonic-prost-build = "0.14.5"